#68 Fix tooltip stuck on click, update the save & selection dialog

--- a/varicity/public/styles/style.css
+++ b/varicity/public/styles/style.css
@@ -1,35 +1,6 @@
-/*#ui_square {*/
-/*    position: absolute;*/
-/*    left: 20%;*/
-/*    top: 78%;*/
-/*    width: 60%;*/
-/*    height: 20%;*/
-/*    background: rgba(0,50,80,0.7);*/
-/*}*/
-
 .overflowable {
     overflow: auto;
 }
-
-/* #project_selector {
-    position: absolute;
-    left: 20%;
-    top: 2%;
-    width: 60%;
-    height: 20%;
-    background: rgba(0,50,80,0.7);
-    color: white;
-    font-family: "Roboto Light", serif;
-    display: flex;
-}
-#metricity {
-    float: left;
-    width: 50%;
-}
-#evostreet {
-    float: right;
-    width: 50%;
-} */
 
 #main {
     width: 100%;
@@ -85,10 +56,11 @@ input {
     color: black;
 }
 
-/* #nodes_details {
-    color: white;
-    font-family: "Roboto Light", serif;
-} */
+.vertical-container {
+    display: flex;
+    flex-direction: column;
+}
+
 
 html {
     height: 100%;
@@ -100,11 +72,20 @@ body {
 }
 
 #save-config {
-    text-align: center;
-    font-weight: bold;
-    background-color: rgb(42, 207, 21);
+    /*text-align: center;*/
+    /*font-weight: bold;*/
+    /*background-color: rgb(42, 207, 21);*/
 }
 
+.save-button {
+    display: flex !important;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em !important;
+    margin-top: 1em;
+}
 
 body{
     margin: 0px;
